[package]
name = "tick-queue"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "Tick ordered queue"
repository = "https://github.com/piot/tick-queue"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tick-id = "0.0.9"

[dev-dependencies]
test-log = "0.2.16"
flood-rs = "0.0.12"
